tests/fixtures/errors/borrowed_take_arg.z
# borrowed_take_arg.z -- a BORROWED binding (an element view from get)
# never moves into a taking argument: fn take-params, non-generic ctor
# fields, and field-bound generic ctor fields all reject with the same
# rule (the pre-element-borrow guard keyed on view-family types only).

G: class {
    val: t
} as { t: Any.generic }

H: class {
    val: String
}

sink: function {v: String.take} is {
    print "got \{v}"
}

main: function is {
    xs: (List String)
    a: "el".string
    xs.append a
    e: xs.get i: 0
    sink v: e
    h: H val: e
    g: G val: e
    print "\{h.val} \{g.val}"
}
